--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <option value="sine">sine</option>
   <option value="square">square</option>
   <option value="triangle">triangle</option>
+  <div><label>Envelope peak rate constant:</label><input id="peak-rate-field" type="number" value="0.1" /></div>
+  <div><label>Envelope decay rate constant:</label><input id="decay-rate-field" type="number" value="0.2" /></div>
 </select>
 </div>
     <button id="start-button">Play</button>
