--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <option value="triangle">triangle</option>
   <div><label>Envelope peak rate constant:</label><input id="peak-rate-field" type="number" value="0.1" /></div>
   <div><label>Envelope decay rate constant:</label><input id="decay-rate-field" type="number" value="0.2" /></div>
+  <div><label>Vibrato rate frequency (Hz):</label><input id="vibrato-rate-field" type="number" value="5" /></div>
+  <div><label>Vibrato pitch variance (cents):</label><input id="vibrato-pitch-field" type="number" value="30" /></div>
+</select>
 </select>
 </div>
     <button id="start-button">Play</button>
