--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
         ><input id="duration-field" type="number" value="1" />
       </div>
     </div>
-    <button id="start-button">Play</button>
+    <button id="create-button">Create new synth</button>
+
+    <ul id="synth-root">
+    </ul>
 
     <script src="index.js"></script>
   </body>
