Support custom (random) waves.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
         <option value="sine">sine</option>
         <option value="square">square</option>
         <option value="triangle">triangle</option>
+        <option value="custom">custom</option>
       </select>
+      <div>
+        <label>Custom wave array length:</label>
+        <input id="array-length-field" type="number" value="2" />
+      </div>
+      <div>
+        <label>Custom wave seed:</label>
+        <input id="wave-seed-field" type="text" value="woom" />
+      </div>
       <div>
         <label>Envelope peak rate constant:</label
         ><input id="peak-rate-field" type="number" value="0.1" />
