--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
         ><input id="vibrato-pitch-field" type="number" value="30" />
       </div>
       <div>
+        <label>Reverb time (seconds)</label
+        ><input id="reverb-time-field" type="number" value="1" />
+      </div>
+      <div>
+        <label>Reverb wet:</label
+        ><input id="reverb-wet-field" type="number" value="0.8" />
+      </div>
+      <div>
+        <label>Reverb dry:</label
+        ><input id="reverb-dry-field" type="number" value="0.6" />
+      </div>
+      <div>
         <label>Sound duration (seconds):</label
         ><input id="duration-field" type="number" value="1" />
       </div>
